# vibe-graph

./: .env.example  .gitignore  Cargo.toml  Makefile  QUALITY_STANDARD.md  README.md  RUSTIFY_POC.md  graph.json  lattice_graph.json  release.toml  vg.toml
.cursor/rules/: automaton-contracts.mdc  vibe-graph.mdc
crates/vibe-graph-api/: Cargo.toml
crates/vibe-graph-api/src/: lib.rs  types.rs  ws.rs
crates/vibe-graph-api/src/routes/: file.rs  git.rs  graph.rs  health.rs  mod.rs  ops.rs
crates/vibe-graph-api/tests/: api_integration.rs
crates/vibe-graph-automaton/: Cargo.toml  PLANNING.md  README.md
crates/vibe-graph-automaton/examples/: game_of_life.rs  llm_game_of_life.rs
crates/vibe-graph-automaton/src/: automaton.rs  config.rs  error.rs  inference.rs  lib.rs  llm_runner.rs  persistence.rs  project_config.rs  rule.rs  script.rs  source_code.rs  state.rs  temporal.rs  test_fixtures.rs
crates/vibe-graph-automaton/src/description/: generator.rs  inferencer.rs  mod.rs
crates/vibe-graph-automaton/tests/: integration_tests.rs
crates/vibe-graph-bevy/: Cargo.toml
crates/vibe-graph-bevy/src/: benchmark.rs  camera.rs  debug_cameras.rs  graph.rs  interaction.rs  layout.rs  lib.rs  main.rs  node_visual.rs  render.rs  ui.rs
crates/vibe-graph-cli/: Cargo.toml  LICENSE  README.md  release.toml
crates/vibe-graph-cli/assets/: vibe_graph_bevy.js  vibe_graph_viz.js  vibe_graph_viz_bg.wasm
crates/vibe-graph-cli/src/: config.rs  main.rs  project.rs  store.rs
crates/vibe-graph-cli/src/commands/: architect.rs  automaton.rs  compose.rs  config.rs  embedded_frontend.rs  graph.rs  mod.rs  org.rs  process.rs  quality.rs  remote.rs  run.rs  rustify.rs  scan.rs  semantic.rs  serve.rs  sync.rs  viz.rs
crates/vibe-graph-cli/templates/: composer.md
crates/vibe-graph-cli/tests/: cli_integration.rs
crates/vibe-graph-constitution/: Cargo.toml
crates/vibe-graph-constitution/src/: lib.rs
crates/vibe-graph-core/: Cargo.toml
crates/vibe-graph-core/src/: lib.rs
crates/vibe-graph-engine/: Cargo.toml
crates/vibe-graph-engine/src/: lib.rs
crates/vibe-graph-git/: Cargo.toml
crates/vibe-graph-git/src/: lib.rs
crates/vibe-graph-layout-gpu/: Cargo.toml  README.md
crates/vibe-graph-layout-gpu/examples/: large_graph.rs  simple_layout.rs
crates/vibe-graph-layout-gpu/src/: error.rs  gpu.rs  gpu_tree.rs  layout.rs  lib.rs  quadtree.rs  shaders.rs  tree_shaders.rs
crates/vibe-graph-llmca/: Cargo.toml
crates/vibe-graph-llmca/src/: lib.rs  prompt_rule.rs
crates/vibe-graph-materializer/: Cargo.toml
crates/vibe-graph-materializer/src/: lib.rs
crates/vibe-graph-mcp/: Cargo.toml
crates/vibe-graph-mcp/src/: gateway.rs  lib.rs  server.rs  tools.rs  types.rs
crates/vibe-graph-ops/: Cargo.toml
crates/vibe-graph-ops/src/: architect.rs  config.rs  context.rs  error.rs  lib.rs  project.rs  requests.rs  responses.rs  scan.rs  store.rs  workspace.rs
crates/vibe-graph-semantic/: Cargo.toml
crates/vibe-graph-semantic/src/: embedder.rs  index.rs  lib.rs  sampler.rs  search.rs  store.rs
crates/vibe-graph-ssot/: Cargo.toml
crates/vibe-graph-ssot/src/: lib.rs
crates/vibe-graph-sync/: Cargo.toml
crates/vibe-graph-sync/src/: lib.rs
crates/vibe-graph-ui/: Cargo.toml
crates/vibe-graph-ui/src/: lib.rs
crates/vibe-graph-viz/: Cargo.toml  Makefile  README.md  Trunk.toml  index.html
crates/vibe-graph-viz/.cargo/: config.toml
crates/vibe-graph-viz/assets/: .gitkeep
crates/vibe-graph-viz/examples/: automaton_viz.rs  native.rs
crates/vibe-graph-viz/src/: api.rs  app.rs  automaton_app.rs  automaton_mode.rs  file_viewer.rs  git_panel.rs  gpu_layout.rs  lib.rs  render.rs  sample.rs  selection.rs  settings.rs  top_bar.rs  vibe_coding.rs
crates/vibe-graph-viz/src/ui/: mod.rs  overlays.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts  ops.ts  types.ts  websocket.ts
frontend/src/components/: TopBar.ts
frontend/src/styles/: main.css
frontend/src/wasm/: loader.ts
