[workspace]
members = [
  "crates/vibe-graph-core",
  "crates/vibe-graph-ssot",
  "crates/vibe-graph-semantic",
  "crates/vibe-graph-llmca",
  "crates/vibe-graph-constitution",
  "crates/vibe-graph-sync",
  "crates/vibe-graph-materializer",
  "crates/vibe-graph-git",
  "crates/vibe-graph-engine",
  "crates/vibe-graph-cli",
  "crates/vibe-graph-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
octocrab = "0.41"
askama = "0.12"
walkdir = "2"
file-format = "0.26"
humansize = "2"
dotenvy = "0.15"
directories = "5"
