[workspace]
members = [
  "crates/vibe-graph-core",
  "crates/vibe-graph-ssot",
  "crates/vibe-graph-semantic",
  "crates/vibe-graph-llmca",
  "crates/vibe-graph-constitution",
  "crates/vibe-graph-sync",
  "crates/vibe-graph-materializer",
  "crates/vibe-graph-git",
  "crates/vibe-graph-engine",
  "crates/vibe-graph-cli",
  "crates/vibe-graph-ui",
  "crates/vibe-graph-viz",
  "crates/vibe-graph-api",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = { version = "0.1.43", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
git2 = "0.20.3"
octocrab = "0.48.1"
askama = "0.14.0"
walkdir = "2.5.0"
file-format = "0.28.0"
humansize = "2.1.3"
dotenvy = "0.15.7"
directories = "6.0.0"
petgraph = "0.8.3"
eframe = "0.33.3"
egui = "0.33.3"
egui_graphs = "0.29.0"
axum = "0.8.7"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
