[package]
name = "vibe-graph-api"
version = "0.3.1"
edition.workspace = true
description = "REST + WebSocket API service for Vibe-Graph"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"

[dependencies]
vibe-graph-core = { version = "0.2.3", path = "../vibe-graph-core" }
vibe-graph-ops = { version = "0.2.2", path = "../vibe-graph-ops" }
vibe-graph-git = { version = "0.3.0", path = "../vibe-graph-git" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
