[package]
name = "vibe-graph-automaton"
version = "0.2.0"
edition.workspace = true
description = "Foundational graph automaton with temporal state evolution and rule-driven transitions"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
keywords = [
    "automaton",
    "graph",
    "cellular-automata",
    "state-machine",
    "temporal",
]
categories = ["data-structures", "simulation"]

[features]
default = []
llm = ["rig-core", "tokio", "async-trait", "toml", "futures", "rand"]

[dependencies]
vibe-graph-core = { version = "0.2.3", path = "../vibe-graph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2.5"

# LLM runner dependencies (optional)
rig-core = { version = "0.11", optional = true }
tokio = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }
toml = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { version = "1.0" }
tempfile = "3.14"
ctrlc = "3.4"

[[example]]
name = "game_of_life"

[[example]]
name = "llm_game_of_life"
required-features = ["llm"]
