[package]
name = "vibe-graph-bevy"
version = "0.1.0"
edition.workspace = true
description = "3D force-directed graph visualizer using Bevy"

[[bin]]
name = "vibe-graph-3d"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
bevy_egui = "0.39"
bevy_panorbit_camera = "0.34"
petgraph = { workspace = true }
vibe-graph-core = { path = "../vibe-graph-core" }
rand = "0.8"
tracing = { workspace = true }
serde_json = { workspace = true }
