[package]
name = "vibe-graph-bevy"
version = "0.1.0"
edition.workspace = true
description = "3D force-directed graph visualizer using Bevy"

[lib]
name = "vibe_graph_bevy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
semantic = ["vibe-graph-semantic", "vibe-graph-semantic/fastembed"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "console"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
bevy_egui = "0.39"
bevy_panorbit_camera = "0.34"
petgraph = { workspace = true }
vibe-graph-core = { path = "../vibe-graph-core" }
vibe-graph-semantic = { path = "../vibe-graph-semantic", optional = true }
rand = "0.8"
tracing = { workspace = true }
serde_json = { workspace = true }

