[package]
name = "vibe-graph-cli"
version = "1.2.1"
edition.workspace = true
description = "CLI for analyzing codebases - single repos or multi-repo workspaces. Auto-detects structure, persists analysis in .self folder."
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"
readme = "README.md"
keywords = ["cli", "codebase", "analysis", "documentation", "workspace"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*", "templates/**/*", "assets/**/*", "LICENSE", "README.md"]

[[bin]]
name = "vg"
path = "src/main.rs"

[features]
default = ["embedded-viz"]
# Embed WASM visualization assets directly in the binary (~3.5MB increase)
# Build with: cargo build --release --features embedded-viz
embedded-viz = []
# Embed TypeScript frontend assets in the binary (~500KB increase)
# NOTE: This feature requires building from source (frontend/dist/ must exist)
# It cannot be enabled via crates.io install.
# Build with: make build-release (or: pnpm --prefix frontend build && cargo build --release --features embedded-frontend)
embedded-frontend = ["rust-embed"]
# Native egui visualization with automaton temporal state viewer
# Build with: cargo build --release --features native-viz
native-viz = [
    "vibe-graph-viz/native",
    "vibe-graph-viz/automaton",
    "eframe/default",
]
# Enable LLM-based automaton inference
# Build with: cargo build --release --features llm-inference
llm-inference = ["vibe-graph-automaton/llm"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
octocrab = { workspace = true }
askama = { workspace = true }
walkdir = { workspace = true }
file-format = { workspace = true }
humansize = { workspace = true }
dotenvy = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vibe-graph-core = { version = "0.2.1", path = "../vibe-graph-core" }
vibe-graph-ops = { version = "0.2.0", path = "../vibe-graph-ops" }
vibe-graph-api = { version = "0.2.0", path = "../vibe-graph-api" }
vibe-graph-git = { version = "0.2.0", path = "../vibe-graph-git" }
vibe-graph-automaton = { path = "../vibe-graph-automaton" }
vibe-graph-viz = { path = "../vibe-graph-viz", optional = true }
eframe = { workspace = true, optional = true }
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { version = "8", optional = true }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
