[package]
name = "vibe-graph-cli"
version = "1.4.0"
edition.workspace = true
description = "CLI for analyzing codebases - single repos or multi-repo workspaces. Auto-detects structure, persists analysis in .self folder."
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"
readme = "README.md"
keywords = ["cli", "codebase", "analysis", "documentation", "workspace"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*", "templates/**/*", "assets/**/*", "LICENSE", "README.md"]

[[bin]]
name = "vg"
path = "src/main.rs"

[features]
default = []
# Native egui visualization with automaton temporal state viewer
# Build with: cargo build --release --features native-viz
native-viz = [
    "vibe-graph-viz/native",
    "vibe-graph-viz/automaton",
    "eframe/default",
]
# GPU-accelerated Barnes-Hut layout (requires WebGPU/wgpu)
# Build with: cargo build --release --features native-viz,gpu-layout
gpu-layout = ["vibe-graph-viz/gpu-layout"]
# Enable LLM-based automaton inference
# Build with: cargo build --release --features llm-inference
llm-inference = ["vibe-graph-automaton/llm"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
octocrab = { workspace = true }
askama = { workspace = true }
walkdir = { workspace = true }
file-format = { workspace = true }
humansize = { workspace = true }
dotenvy = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vibe-graph-core = { version = "0.2.1", path = "../vibe-graph-core" }
vibe-graph-ops = { version = "0.2.1", path = "../vibe-graph-ops" }
vibe-graph-api = { version = "0.3.0", path = "../vibe-graph-api" }
vibe-graph-git = { version = "0.3.0", path = "../vibe-graph-git" }
vibe-graph-automaton = { version = "0.2.0", path = "../vibe-graph-automaton" }
vibe-graph-mcp = { version = "0.1.0", path = "../vibe-graph-mcp" }
vibe-graph-viz = { version = "0.1.1", path = "../vibe-graph-viz", optional = true }
eframe = { workspace = true, optional = true }
axum = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = "3"
