[package]
name = "vibe-graph-core"
version = "0.2.1"
edition.workspace = true
description = "Core domain model for the Vibe-Graph neural OS"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
keywords = ["graph", "codebase", "analysis", "source-code"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }

# WASM-compatible time (std::time::Instant panics in WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1"
