[package]
name = "vibe-graph-git"
version = "0.1.0"
edition.workspace = true
description = "Git fossilization layer for Vibe-Graph snapshots"
publish = false

[package.metadata.release]
release = false

[dependencies]
anyhow = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
vibe-graph-core = { path = "../vibe-graph-core" }

[dev-dependencies]
tempfile = "3.20"
