[package]
name = "vibe-graph-git"
version = "0.2.0"
edition.workspace = true
description = "Git fossilization layer for Vibe-Graph snapshots"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"

[dependencies]
anyhow = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
vibe-graph-core = { version = "0.2.0", path = "../vibe-graph-core" }

[dev-dependencies]
tempfile = "3.20"
