[package]
name = "vibe-graph-layout-gpu"
version = "0.1.0"
edition.workspace = true
description = "GPU-accelerated force-directed graph layout using WebGPU/wgpu"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
keywords = ["graph", "layout", "gpu", "webgpu", "barnes-hut"]
categories = ["visualization", "graphics"]

[features]
default = []

[dependencies]
wgpu = "24.0"
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"  # For blocking on async in non-async contexts
thiserror = { workspace = true }
tracing = { workspace = true }

# For quadtree
ordered-float = "4.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

