[package]
name = "vibe-graph-mcp"
version = "0.2.4"
edition.workspace = true
description = "MCP (Model Context Protocol) server for Vibe-Graph"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"

[features]
default = ["http-server"]
http-server = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:tower-http", "dep:tokio-util"]
semantic = ["dep:vibe-graph-semantic", "vibe-graph-semantic/fastembed"]

[dependencies]
vibe-graph-core = { version = "0.2.5", path = "../vibe-graph-core" }
vibe-graph-ops = { version = "0.2.5", path = "../vibe-graph-ops" }
vibe-graph-git = { version = "0.3.2", path = "../vibe-graph-git" }
vibe-graph-semantic = { version = "0.1.0", path = "../vibe-graph-semantic", optional = true }

# MCP SDK
rmcp = { version = "0.13", features = ["server"] }

# HTTP server (optional, for HTTP transport)
axum = { workspace = true, optional = true, features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-util = { version = "0.7", optional = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"

# Thread-safe collections
dashmap = "6"

# HTTP client for gateway registration
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket client for heartbeat
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
