[package]
name = "vibe-graph-ops"
version = "0.1.0"
edition.workspace = true
description = "Operations layer for Vibe-Graph - provides typed APIs for sync, scan, graph building"
license = "MIT"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
walkdir.workspace = true
git2.workspace = true
octocrab.workspace = true
file-format.workspace = true
humansize.workspace = true
directories.workspace = true

# Local crates
vibe-graph-core = { path = "../vibe-graph-core" }
vibe-graph-git = { path = "../vibe-graph-git" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
