[package]
name = "vibe-graph-ops"
version = "0.2.1"
edition.workspace = true
description = "Operations layer for Vibe-Graph - provides typed APIs for sync, scan, graph building"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"
keywords = ["codebase", "analysis", "sync", "graph"]
categories = ["development-tools"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
walkdir.workspace = true
git2.workspace = true
octocrab.workspace = true
file-format.workspace = true
humansize.workspace = true
directories.workspace = true

# Local crates
vibe-graph-core = { version = "0.2.1", path = "../vibe-graph-core" }
vibe-graph-git = { version = "0.3.0", path = "../vibe-graph-git" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
