[package]
name = "vibe-graph-semantic"
version = "0.1.0"
edition.workspace = true
description = "Semantic/narrative layer bridging structural graphs to concepts"
publish = false

[package.metadata.release]
release = false

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
vibe-graph-core = { path = "../vibe-graph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Native-only embedding backend (not WASM-compatible due to ort/ONNX)
fastembed = { version = "5", optional = true }
