[package]
name = "vibe-graph-viz"
version = "0.1.0"
edition.workspace = true
description = "WASM-compatible egui visualization for Vibe-Graph"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native = ["eframe/default"]

[dependencies]
vibe-graph-core = { path = "../vibe-graph-core" }
eframe = { workspace = true, features = ["glow"] }
egui = { workspace = true }
egui_graphs = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
