[package]
name = "vibe-graph-viz"
version = "0.1.2"
edition.workspace = true
description = "WASM-compatible egui visualization for Vibe-Graph"
license = "MIT"
repository = "https://github.com/pinsky-three/vibe-graph"
homepage = "https://github.com/pinsky-three/vibe-graph"
keywords = ["visualization", "egui", "graph", "wasm"]
categories = ["visualization", "gui"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native = ["eframe/default"]
automaton = ["vibe-graph-automaton"]
gpu-layout = ["vibe-graph-layout-gpu"]

[dependencies]
vibe-graph-core = { version = "0.2.4", path = "../vibe-graph-core" }
vibe-graph-automaton = { version = "0.2.1", path = "../vibe-graph-automaton", optional = true }
vibe-graph-layout-gpu = { version = "0.1.1", path = "../vibe-graph-layout-gpu", optional = true }
eframe = { workspace = true, features = ["glow"] }
egui = { workspace = true }
egui_extras = { version = "0.33.3", features = ["syntect"] }
egui_graphs = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pollster = "0.4"  # For blocking on async GPU init

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[[example]]
name = "automaton_viz"
required-features = ["native", "automaton"]
